Fix stats bar wrapping and Leaflet map marker icon
- Add flex-wrap: nowrap to .stats.row to prevent stats from wrapping
  onto multiple lines on larger screens
- Fix Leaflet marker icon paths broken by Vite bundling by explicitly
  importing marker images and configuring L.Icon.Default

--- a/resources/sass/_login-page.scss
+++ b/resources/sass/_login-page.scss
@@ -48,9 +48,12 @@
     }
 }
 
-.stats {
+.stats.row {
     margin-bottom: 30px;
+    flex-wrap: nowrap;
+}
 
+.stats {
     &__stat {
         border-right: 1px solid black;
     }
